assets/style.css
html {
  height: 100%;
  width: 100%;
  margin: 0;
  box-sizing: border-box;
  overflow: hidden;
}
body {
  height: 100%;
  width: 100vw;
  margin: 0;
  font-family: "Raleway", sans-serif;
}
.container {
  width: 100%;
  height: 100vh;
}
/**
*********************************************************
Loading Start
*********************************************************
**/
.load {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  visibility: initial;
}
#logo {
  width: 20vh;
}
h1 {
  margin: 0;
  font-family: "Nanum Gothic", sans-serif;
  font-size: 3em;
  font-weight: bolder;
}
.subtitle {
  font-family: "Raleway", sans-serif;
  letter-spacing: 1em;
  padding-left: 1em;
}
/**
*********************************************************
Loading End
*********************************************************
**/
/**
*********************************************************
About Start
*********************************************************
**/
.about {
  background-color: #fff;
  position: absolute;
  width: 100vw;
  z-index: 10;
  height: 100%;
  display: flex;
  visibility: hidden;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* display: unset; */
}
.about__text {
  margin: 0;
  padding: 0em 2em;
  text-align: center;
  line-height: 1.3em;
}
.back_box {
  position: absolute;
  top: 1em;
  left: 0;
  width: 100%;
}
.back {
  font-size: 2em;
  padding-left: 1em;
}
/**
*********************************************************
About End
*********************************************************
**/
/**
*********************************************************
Timer Start
*********************************************************
**/
.main {
  visibility: hidden;
}
.nav {
  padding: 1em 1em;
}
.nav h1 {
  font-size: 1.5em;
  display: inline;
}
.nav .subtitle {
  font-size: 0.7em;
  padding: 0;
  letter-spacing: 0.5em;
}
.about-link {
  display: inline;
  margin: 0;
  padding: 0;
  float: right;
  color: #9c9c9c;
  margin-top: 1em;
}
.timer {
  position: relative;
  width: 100vw;
  height: 33vh;
}
svg {
  position: absolute;
}
circle {
  position: absolute;
  fill: none;
  stroke-width: 15;
  stroke-dasharray: 0;
  stroke-linecap: round;
}
circle:nth-child(1) {
  stroke: rgb(255, 255, 255);
  box-shadow: 200px 200px 200px 200px rgba(0, 0, 0, 0.75);
  filter: drop-shadow(0px 0px 10px rgba(204, 203, 203, 0.4));
}
circle:nth-child(2) {
  stroke: #e31e24;
  stroke-dasharray: 570;
  stroke-dashoffset: 0;
  transition: stroke-dashoffset 0.8s ease-in-out;
}
.percent {
  background-color: #efefef;
}
.time_left {
  position: absolute;
  left: 50%;
  top: 15vw;
  /* padding-top: 90%; */
  transform: translate(-50%, 0%);
}
.time_left h2 {
  font-size: 3.4em;
  font-weight: 500;
  transition: all 1s ease-in-out;
}

/**
*********************************************************
Timer End
*********************************************************
**/

/**
*********************************************************
Next-Episode and Add Time Start
*********************************************************
**/

.add_time {
  width: 100%;
  color: #e31e24;
  font-size: 1.2em;
  text-align: center;
}
.next_episode {
  color: #000;
  font-size: 1em;
  line-height: 2em;
  letter-spacing: 0.1em;
}
.next_episode span {
  font-size: 1.5em;
  font-weight: bold;
}

/**
*********************************************************
Next-Episode and Add Time End
*********************************************************
**/

/**
*********************************************************
Icons Start
*********************************************************
**/
.icons {
  width: 100vw;
  margin-top: 2em;
  display: flex;
  justify-content: space-around;
}
.icons img {
  width: 16vw;
  height: 16vw;
  filter: drop-shadow(0px 2px 10px rgba(233, 232, 231, 1));
  transition: all 1s ease-in-out;
}
.icons img:hover {
  transform: scale(1.1);
}
.icons img:nth-child(2n + 1) {
  margin-top: 3em;
}
/**
*********************************************************
Icons End
*********************************************************
**/

/**
*********************************************************
Animation Start
*********************************************************
**/

.fade-in {
  animation: 1s ease-out fadeIn;
}
.fade-out {
  animation: 0.5s ease-out fadeOut;
  animation-fill-mode: forwards;
}
.slide-in {
  animation: 0.5s ease-in-out slideInFromRight;
  animation-fill-mode: forwards;
}
.slide-out {
  animation: 0.5s ease-in-out slideInFromLeft;
  animation-fill-mode: forwards;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(10%);
  }
  100% {
    opacity: 1;
    transform: translateY(0%);
  }
}
@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0%);
  }
}

@keyframes slideInFromLeft {
  from {
    transform: translateX(0%);
    visibility: none;
  }
  to {
    transform: translateX(100%);
    display: none;
  }
}

